chapter7/gke-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: webapp
            port:
              number: 80
      - path: /frontend
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend
            port:
              number: 81
